Add path to debug metadata
Allow to tackle issue with ambigous files.